fixed row flex align bug

--- a/packages/theme-default/src/row.css
+++ b/packages/theme-default/src/row.css
@@ -26,6 +26,13 @@
       @when justify-space-around {
         justify-content: space-around;
       }
+
+      @when align-middle {
+        align-items: center;
+      }
+      @when align-bottom {
+        align-items: flex-end;
+      }
     }
 
   }
